@@ -1,3 +1,7 @@
+2016-07-18 Hanna Knutsson <hanna_k@fmgirl.com>
+
+	* Only run a single instance of the application
+
 2016-06-11 Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Show actual number of days since last exchange rates update
